add supervisor and autostart

--- a/7.4-fpm/Dockerfile
+++ b/7.4-fpm/Dockerfile
@@ -35,3 +35,8 @@ ENV COMPOSER_HOME /composer
 ENV PATH ./vendor/bin:/composer/vendor/bin:$PATH
 ENV COMPOSER_ALLOW_SUPERUSER 1
 RUN curl -s https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin/ --filename=composer
+
+COPY ./supervisord.conf /etc/supervisor
+EXPOSE 9001
+
+CMD ["/usr/bin/supervisord", "-c", "/etc/supervisor/supervisord.conf"]
