--- a/7.4-fpm-alpine/supervisord.conf
+++ b/7.4-fpm-alpine/supervisord.conf
@@ -1,12 +1,12 @@
 [unix_http_server]
-file = /var/run/supervisor.sock
+file = /run/supervisord.sock
 chmod = 0770
 username = guest
 password = guest
 
 [supervisord]
-logfile = /var/log/supervisor/supervisord.log
-pidfile = /var/run/supervisord.pid
+logfile = /var/log/supervisord.log
+pidfile = /run/supervisord.pid
 childlogdir = /var/log/supervisor
 nodaemon = true
 user = root
@@ -15,7 +15,7 @@ user = root
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [supervisorctl]
-serverurl = unix:///var/run/supervisor.sock
+serverurl = unix:///run/supervisord.sock
 
 [inet_http_server]
 port = 9001
