--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,7 +14,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@master
-    - name: Build the Docker image
+    - name: Build 7.4-fpm-alpine docker images
       run: |
-        ls -l
-        pwd
+        cd 7.4-fpm-alpine
+        docker build -t xamarie/phpdocker:7.4-fpm-alpine .
+        docker push xamarie/phpdocker:7.4-fpm-alpine
