--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,5 +18,5 @@ jobs:
       run: |
         cd 7.4-fpm-alpine
         docker build -t xamarie/phpdocker:7.4-fpm-alpine .
-        docker tag github-build-7.4-fpm-alpine xamarie/phpdocker:7.4-fpm-alpine
+        docker login --username=${{ secrets.DOCKER_HUB_USER }} --password=${{ secrets.DOCKER_HUB_PASS }} docker.io
         docker push xamarie/phpdocker:7.4-fpm-alpine
