--- a/7.4-fpm-alpine/Dockerfile
+++ b/7.4-fpm-alpine/Dockerfile
@@ -1,7 +1,7 @@
 FROM php:7.4-fpm-alpine3.11
 
 RUN apk add --no-cache --virtual .phpize-deps $PHPIZE_DEPS nano zip unzip wget \
-    && apk add --no-cache libzip-dev pcre-dev postgresql-dev libmemcached-dev oniguruma-dev libxml2-dev freetype-dev libjpeg-turbo-dev libpng-dev icu-dev \
+    && apk add --no-cache libzip-dev pcre-dev postgresql-dev imagemagick-dev libmemcached-dev oniguruma-dev libxml2-dev freetype-dev libjpeg-turbo-dev libpng-dev icu-dev \
     && docker-php-ext-install exif pdo pdo_mysql mysqli pdo_pgsql pgsql bcmath ctype fileinfo json mbstring tokenizer opcache \
     && docker-php-ext-install zip intl xml dom xmlrpc xmlwriter gd sockets \
     && docker-php-ext-install -j$(nproc) iconv \
@@ -22,6 +22,9 @@ RUN docker-php-source extract \
     && mkdir -p /usr/src/php/ext/apcu \
     && curl -fsSL https://github.com/krakjoe/apcu/archive/v5.1.17.tar.gz | tar xvz -C /usr/src/php/ext/apcu --strip 1 \
     && docker-php-ext-install apcu \
+    && mkdir -p /usr/src/php/ext/imagick \
+    && curl -fsSL https://github.com/imagick/imagick/archive/3.5.0.tar.gz | tar xvz -C /usr/src/php/ext/imagick --strip 1 \
+    && docker-php-ext-install imagick \
     && docker-php-source delete
 
 RUN echo 'opcache.interned_strings_buffer=16' >> /usr/local/etc/php/conf.d/docker-php-ext-opcache.ini \
