add image magic and add jpeg support for gd

--- a/7.4-fpm/Dockerfile
+++ b/7.4-fpm/Dockerfile
@@ -2,15 +2,17 @@ FROM php:7.4-fpm
 
 RUN apt-get update \
     && apt-get install --no-install-recommends --no-upgrade -y nano zip unzip wget software-properties-common \
-    && apt-get install --no-install-recommends --no-upgrade -y libzip-dev libpcre3-dev libicu-dev libpq-dev libmemcached-dev libonig-dev libxml2-dev libfreetype-dev libjpeg-dev libpng-dev \
+    && apt-get install --no-install-recommends --no-upgrade -y libmagickwand-dev libzip-dev libpcre3-dev libicu-dev libpq-dev libmemcached-dev libonig-dev libxml2-dev libfreetype-dev libjpeg-dev libpng-dev \
     && docker-php-ext-configure pgsql --with-pgsql=/usr/local/pgsql \
     && docker-php-ext-install exif pdo pdo_mysql mysqli pdo_pgsql pgsql bcmath ctype fileinfo json mbstring tokenizer opcache \
-    && docker-php-ext-install zip intl xml dom xmlrpc xmlwriter gd sockets \
+    && docker-php-ext-install zip intl xml dom xmlrpc xmlwriter sockets \
     && docker-php-ext-install -j$(nproc) iconv \
     && rm -rf /tmp/*
 
 RUN apt-get install --no-install-recommends --no-upgrade -y supervisor git openssh-client libcurl4-openssl-dev \
     && docker-php-ext-install curl \
+    && docker-php-ext-configure gd --with-freetype --with-jpeg \
+    && docker-php-ext-install -j$(nproc) gd \
     && rm -rf /tmp/*
 
 RUN docker-php-source extract \
@@ -24,6 +26,9 @@ RUN docker-php-source extract \
     && mkdir -p /usr/src/php/ext/apcu \
     && curl -fsSL https://github.com/krakjoe/apcu/archive/v5.1.17.tar.gz | tar xvz -C /usr/src/php/ext/apcu --strip 1 \
     && docker-php-ext-install apcu \
+    && mkdir -p /usr/src/php/ext/imagick \
+    && curl -fsSL https://github.com/imagick/imagick/archive/3.5.0.tar.gz | tar xvz -C /usr/src/php/ext/imagick --strip 1 \
+    && docker-php-ext-install imagick \
     && docker-php-source delete
 
 RUN echo 'opcache.interned_strings_buffer=16' >> /usr/local/etc/php/conf.d/docker-php-ext-opcache.ini \
