--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,12 +16,12 @@ jobs:
       run: |
         cd 7.4-fpm-alpine
         docker build -t xamarie/phpdocker:7.4-fpm-alpine .
-        docker login --username=${{ secrets.DOCKER_HUB_USER }} --password=${{ secrets.DOCKER_HUB_PASS }} docker.io
+        echo ${{ secrets.DOCKER_HUB_PASS }} | docker login --username ${{ secrets.DOCKER_HUB_USER }} --password-stdin docker.io
         docker push xamarie/phpdocker:7.4-fpm-alpine
     - uses: actions/checkout@master
     - name: Build 7.4-fpm docker images
       run: |
         cd 7.4-fpm
         docker build -t xamarie/phpdocker:7.4-fpm .
-        docker login --username=${{ secrets.DOCKER_HUB_USER }} --password=${{ secrets.DOCKER_HUB_PASS }} docker.io
+        echo ${{ secrets.DOCKER_HUB_PASS }} | docker login --username ${{ secrets.DOCKER_HUB_USER }} --password-stdin docker.io
         docker push xamarie/phpdocker:7.4-fpm
