start using nonroot user

--- a/7.4-fpm/Dockerfile
+++ b/7.4-fpm/Dockerfile
@@ -41,3 +41,5 @@ COPY ./supervisord.conf /etc/supervisor
 EXPOSE 9001
 
 CMD ["/usr/bin/supervisord", "-c", "/etc/supervisor/supervisord.conf"]
+
+USER www-data
