--- a/7.4-fpm/Dockerfile
+++ b/7.4-fpm/Dockerfile
@@ -42,4 +42,5 @@ EXPOSE 9001
 
 CMD ["/usr/bin/supervisord", "-c", "/etc/supervisor/supervisord.conf"]
 
+RUN usermod -aG root www-data
 USER www-data
