starting as nonroot user

--- a/7.4-fpm/Dockerfile
+++ b/7.4-fpm/Dockerfile
@@ -37,10 +37,12 @@ ENV PATH ./vendor/bin:/composer/vendor/bin:$PATH
 ENV COMPOSER_ALLOW_SUPERUSER 1
 RUN curl -s https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin/ --filename=composer
 
+RUN usermod -aG root www-data \
+    && mkdir /var/supervisor /var/supervisor/log /var/supervisor/run /var/supervisor/childlog \
+    && chown -R www-data:root /var/supervisor
+
+USER www-data
 COPY ./supervisord.conf /etc/supervisor
 EXPOSE 9001
 
 CMD ["/usr/bin/supervisord", "-c", "/etc/supervisor/supervisord.conf"]
-
-RUN usermod -aG root www-data
-USER www-data
