--- a/7.4-fpm/supervisord.conf
+++ b/7.4-fpm/supervisord.conf
@@ -1,21 +1,21 @@
 [unix_http_server]
-file = /var/run/supervisor.sock
+file = /var/supervisor/run/supervisor.sock
 chmod = 0770
 username = guest
 password = guest
 
 [supervisord]
-logfile = /var/log/supervisor/supervisord.log
-pidfile = /var/run/supervisord.pid
-childlogdir = /var/log/supervisor
+logfile = /var/supervisor/log/supervisord.log
+pidfile = /var/supervisor/run/supervisord.pid
+childlogdir = /var/supervisor/childlog
 nodaemon = true
-user = root
+# user = root
 
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [supervisorctl]
-serverurl = unix:///var/run/supervisor.sock
+serverurl = unix:///var/supervisor/run/supervisor.sock
 
 [inet_http_server]
 port = 9001
